crates/nash-parse/src/expression/snapshots/nash_parse__expression__tuple__tests__applied_section.snap
---
source: crates/nash-parse/src/expression/tuple.rs
description: "Code:\n\n(> 5) 10"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 9,
        },
    },
    value: Call {
        function: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 6,
                },
            },
            value: RightSection {
                operator: ">",
                right: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 4,
                        },
                        end: Position {
                            line: 1,
                            column: 5,
                        },
                    },
                    value: Int(
                        5,
                    ),
                },
            },
        },
        arguments: [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 7,
                    },
                    end: Position {
                        line: 1,
                        column: 9,
                    },
                },
                value: Int(
                    10,
                ),
            },
        ],
    },
}
