crates/nash-parse/src/expression/snapshots/nash_parse__expression__tuple__tests__call_left_section.snap
---
source: crates/nash-parse/src/expression/tuple.rs
description: "Code:\n\n(f x |> )"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 10,
        },
    },
    value: LeftSection {
        left: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 2,
                },
                end: Position {
                    line: 1,
                    column: 5,
                },
            },
            value: Call {
                function: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 2,
                        },
                        end: Position {
                            line: 1,
                            column: 3,
                        },
                    },
                    value: Var {
                        kind: LowVar,
                        name: "f",
                    },
                },
                arguments: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 4,
                            },
                            end: Position {
                                line: 1,
                                column: 5,
                            },
                        },
                        value: Var {
                            kind: LowVar,
                            name: "x",
                        },
                    },
                ],
            },
        },
        operator: "|>",
    },
}
