crates/nash-parse/src/expression/snapshots/nash_parse__expression__tuple__tests__error_empty_comma.snap
---
source: crates/nash-parse/src/expression/tuple.rs
description: "Code:\n\n(,)"
info: diagnostic
---
nash::syntax

  × Expected an expression or `)`.
   ╭─[src/Main.nash:1:2]
 1 │ (,)
   ·  ─
   ╰────
  help: Add an expression inside the parentheses.
