crates/nash-parse/src/expression/snapshots/nash_parse__expression__tuple__tests__error_reserved_section_operator.snap
---
source: crates/nash-parse/src/expression/tuple.rs
description: "Code:\n\n(=> 5)"
---
Tuple(
    OperatorReserved(
        FatArrow,
        1,
        2,
    ),
    1,
    1,
)
