crates/nash-parse/src/expression/snapshots/nash_parse__expression__tuple__tests__error_section_missing_operand.snap
---
source: crates/nash-parse/src/expression/tuple.rs
description: "Code:\n\n(> ,)"
info: diagnostic
---
nash::syntax

  × Expected an expression in some parentheses.
   ╭─[src/Main.nash:1:4]
 1 │ (> ,)
   ·    ─
   ╰────
  help: Add an expression or `todo` for an unfinished body.
