crates/nash-parse/src/expression/snapshots/nash_parse__expression__tuple__tests__error_section_unclosed.snap
---
source: crates/nash-parse/src/expression/tuple.rs
description: "Code:\n\n(> 5"
info: diagnostic
---
nash::syntax::unclosed_delimiter

  × Expected `)` to close `(`.
   ╭─[src/Main.nash:1:5]
 1 │ (> 5
   · ┬   ┬
   · │   ╰── expected `)`
   · ╰── opened here
   ╰────
  help: Add `)` here.
