crates/nash-parse/src/expression/snapshots/nash_parse__expression__tuple__tests__error_trailing_comma.snap
---
source: crates/nash-parse/src/expression/tuple.rs
description: "Code:\n\n(1, 2,)"
info: diagnostic
---
nash::syntax

  × Expected an expression before the closing delimiter.
   ╭─[src/Main.nash:1:7]
 1 │ (1, 2,)
   ·       ─
   ╰────
  help: Add the missing expression, or remove a trailing comma.
