crates/nash-parse/src/expression/snapshots/nash_parse__expression__tuple__tests__error_unclosed.snap
---
source: crates/nash-parse/src/expression/tuple.rs
description: "Code:\n\n(1, 2"
info: diagnostic
---
nash::syntax::unclosed_delimiter

  × Expected `)` to close `(`.
   ╭─[src/Main.nash:1:6]
 1 │ (1, 2
   · ┬    ┬
   · │    ╰── expected `)`
   · ╰── opened here
   ╰────
  help: Add `)` here.
