crates/nash-parse/src/expression/snapshots/nash_parse__expression__tuple__tests__left_section.snap
---
source: crates/nash-parse/src/expression/tuple.rs
description: "Code:\n\n(5 >)"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 6,
        },
    },
    value: LeftSection {
        left: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 2,
                },
                end: Position {
                    line: 1,
                    column: 3,
                },
            },
            value: Int(
                5,
            ),
        },
        operator: ">",
    },
}
