crates/nash-parse/src/expression/snapshots/nash_parse__expression__tuple__tests__operator_application.snap
---
source: crates/nash-parse/src/expression/tuple.rs
description: "Code:\n\n((+) 1)"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 2,
        },
        end: Position {
            line: 1,
            column: 7,
        },
    },
    value: Call {
        function: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 2,
                },
                end: Position {
                    line: 1,
                    column: 5,
                },
            },
            value: Op(
                "+",
            ),
        },
        arguments: [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 6,
                    },
                    end: Position {
                        line: 1,
                        column: 7,
                    },
                },
                value: Int(
                    1,
                ),
            },
        ],
    },
}
